Update of Presentations

--- a/src/app/assignments/page.mdx
+++ b/src/app/assignments/page.mdx
@@ -8,17 +8,17 @@ import { default as ClarityAndPresentation } from "@/contentcomponents/ClarityAn
 
 # Assignments
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 <AssignmentsOverview />
 
+{/*
+<!-- We currently only have one policy -->
 ## Assignment Policies
+*/}
 
 <ContributionStatements />
 
 {/*
-
 <ClarityAndPresentation />
-
-
 */}
