--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -35,7 +35,7 @@ This capstone focuses on human-centered design with and around AI:
 - We do not assume or expect engagement with development of the underlying AI.
 
 {/* TODO: I think the pre-req courses may have changed, especially in HCDE. */}
-Given these expectations, the capstone publishes a pre-req of CSE 340, CSE 440, HCDE 318, or INFO 360.
+Given these expectations, the capstone publishes a pre-requisite of CSE 340, CSE 440, HCDE 318, or INFO 360.
 
 ## Course Staff
 
