--- a/src/app/assignments/papers/page.mdx
+++ b/src/app/assignments/papers/page.mdx
@@ -10,7 +10,7 @@ import { courseData } from "@/data/CourseData";
 Pairs of students will lead in-class presentation and discussion of research papers exploring human-AI interaction.
 
 Our goals for this presentation and discussion format are to:
-- Introduce students to a range of explorations of human-AI interaction.
+- Introduce students to principles of and explorations in human-AI interaction.
 - Provide a structure in which students can learn about and discuss those explorations.
 - Help to surface approaches and insights that may benefit students in their own work.
 
@@ -37,7 +37,7 @@ Presentations should be organized as:
 
   You will not have time to share the background of all authors,
   but should briefly research each author and concisely share your most important findings
-  (e.g., background that other students might want to know if they encountered a prominent author).
+  (e.g., background other students might want to know if they met an author).
 
 - Primary research activities of the paper (e.g., a system, a study, an analysis).
 
@@ -89,12 +89,11 @@ presentation groups are required to submit a near-complete PDF of the presentati
 The submitted draft is expected to be appropriate and have all necessary content,
 but presenters may continue to iterate to further improve the presentation prior to class.
 
-Canvas support is limited.
-We have created assignments with no specific due date.
+Canvas support is limited, so we have created assignments with no specific due date.
 Any individual's first paper presentation should be submitted as "Paper Presentation 1".
 That same individual's second paper presentation should then be submitted as "Paper Presentation 2".
 Both members of a presentation group should submit the PDF
-(i.e., because this is easiest for course staff monitoring of Canvas assignments).
+(i.e., because this is easiest for course staff in monitoring Canvas assignments).
 If a Canvas submission is accidentally delayed,
 contact the staff by email to ensure we are aware the slides were appropriately prepared by the time of the deadline.
 
@@ -113,10 +112,10 @@ presenters should provide brief confidential feedback on contributions.
 
 <ContributionStatementsReference />
 
-#### Paper Presentation 1 Canvas Link:
+#### Paper Presentation 1 Contribution Statement Canvas Link:
 
 <CourseDataLink linkHref={courseData.offering.linkCanvasPaperPresentation1ContributionStatement} outerComponent="p"/>
 
-#### Paper Presentation 2 Canvas Link:
+#### Paper Presentation 2 Contribution Statement Canvas Link:
 
 <CourseDataLink linkHref={courseData.offering.linkCanvasPaperPresentation1ContributionStatement} outerComponent="p"/>
