--- a/src/content/ContributionStatements.mdx
+++ b/src/content/ContributionStatements.mdx
@@ -1,18 +1,33 @@
-### Contribution Statements
+## Contribution Statements
 
 Together with each group assignment submission,
 group members will individually submit a contribution statement.
 
-A contribution statement should be brief and include three components:
+A contribution statement should be brief and include four components:
 
-1. Percentage Contribution Estimates
+1. **Time and Contributions**
+
+   First indicate approximately how much time you spent on this group assignment
+   (i.e., in hours, including time spent working individually or with others).
+
+   Then summarize your individual contributions to the group assignment
+   (i.e., what major activities did you complete in the overall assignment).
+   Optionally, you may choose to indicate how much time you spent on each major activity
+   or may choose to provide more context around how those activities contributed to the group assignment.
+
+   We ask for this in part to promote reflection and discussion within a group
+   (i.e., some tensions in groups can be attributed to "invisibility" of conducting high-quality work).
+   If issues begin to develop within a group, consider reviewing and discussing the time and contributions of each member.
+
+2. **Percentage Contribution Estimates**
 
    List the name of each member of your group (i.e., including yourself).
-   Indicate an estimated percentage of effort each member contributed across all activities in the assignment.
+   Indicate an estimated percentage of effort each member contributed across all activities in the group assignment.
+   This should sum to 100%.
 
    Each contribution statement must include percentage contribution estimates.
 
-2. Group Check-In
+3. **Group Check-In**
 
    We understand, and expect that you will understand,
    that different group members will have different constraints throughout the course.
@@ -30,7 +45,7 @@ A contribution statement should be brief and include three components:
    If there is nothing notable to share,
    you can omit this or simply indicate you feel things are going as expected.
 
-3. Individual Check-In
+4. **Individual Check-In**
 
    If you would like the staff to be aware
    of any factors that impacted your individual contribution,
@@ -45,6 +60,14 @@ A contribution statement should be brief and include three components:
 An example contribution statement therefore might be:
 
   > __Your Name__
+  >
+  > __Time and Contributions__
+  >
+  > I spent a total of approximately 12 hours on this assignment.
+  >
+  > Most of that was in implementing front end functionality,
+  > including several hours on a particularly frustrating bug.
+  > I then also spent about an hour preparing my portion of the report.
   >
   > __Percentage Contribution Estimates__
   > - Your Name: 25%
@@ -70,9 +93,9 @@ in your group check-in comments,
 in your individual check-in comments),
 or if there is anything that leads you to anticipate continued challenges,
 we encourage you to reach out via email to the course staff.
-Contribution statements are intended to support your own reflection
-and to pro-actively gather everybody's perspective,
-but an email to the course staff will help ensure prompt engagement with this information.
+Contribution statements are intended to pro-actively gather everybody's perspective,
+which then also support your own reflection and discussion.
+An email to the course staff will help ensure prompt engagement with this information.
 
 The staff also understands that percentages are incomplete and subjective,
 so we gather them only as a summary indication and do not use them directly in any grade calculation.
