Migrate Project Due Dates to CalendarData

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -61,7 +61,7 @@ Submit via Canvas.
 All members of a project group should submit the PDF
 (i.e., because this is easiest for course staff while groups are still potentially in flux).
 
-**Due:** Wed Apr 9, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectGroupBrainstorm.date, "EEE MMM d")}, 8pm
 
 &nbsp;
 
@@ -69,7 +69,7 @@ All members of a project group should submit the PDF
 
 Finalize a project group in the provided signup document shared by the entire class.
 
-**Due:** Sun Apr 13, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectGroupsFinalized.date, "EEE MMM d")}, 8pm
 
 &nbsp;
 
@@ -127,7 +127,7 @@ Include the following sections:
 
 Submit via Canvas.
 
-**Due:** Mon Apr 21, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectDesignProposal.date, "EEE MMM d")}, 8pm
 
 &nbsp;
 
@@ -197,7 +197,7 @@ Submit a Design Status Report as a separate document.
 
 Submit via Canvas.
 
-**Due:** Wed Apr 30, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectFormativeResearch.date, "EEE MMM d")}, 8pm
 
 &nbsp;
 
@@ -269,7 +269,7 @@ Ensure the full code of your interactive prototype is committed to your GitLab p
 
 Submit via Canvas.
 
-**Due:** Sun May 11, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectInteractivePrototype.date, "EEE MMM d")}, 8pm
 
 &nbsp;
 
@@ -346,7 +346,7 @@ Ensure the full code of your interactive prototype is committed to your GitLab p
   If so, clearly document such additional necessary configuration in the README.
 - Be responsive to any questions from the course staff regarding your prototype.
 
-**Due:** Sun May 25, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectRevisedPrototype.date, "EEE MMM d")}, 8pm
 
 Submit via Canvas.
 
@@ -394,7 +394,7 @@ Due to frequent challenges in printing, submit both:
 
 We then expect teams to be available and responsive via email for feedback and rapid iteration to finalize the poster.
 
-**Due:** Fri May 30, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectPoster.date, "EEE MMM d")}, 8pm
 
 &nbsp;
 
@@ -488,7 +488,7 @@ Ensure the full code of your interactive prototype is committed to your GitLab p
 
 Submit via Canvas.
 
-**Due:** Sun Jun 1, 8pm
+**Due:** {formatCalendarDate(calendarData.assignments.projectFinalPrototype.date, "EEE MMM d")}, 8pm
 
 &nbsp;
 
@@ -515,9 +515,9 @@ Your presentation should include:
 
 Presentations should be 6 to 8 minutes in length, which will allow time for discussion and questions.
 
-**Slides Due:** Mon Jun 2, 8pm
+**Slides Due:** {formatCalendarDate(calendarData.assignments.projectSlides.date, "EEE MMM d")}, 8pm
 
-**Presentation:** In-Class, Tue Jun 3
+**Presentation:** In-Class, {formatCalendarDate(calendarData.assignments.projectPresentation.date, "EEE MMM d")}
 
 &nbsp;
 
@@ -539,7 +539,7 @@ This could be a silent title slide for each task scenario, then a short video se
 
 The final poster showcase is graded only for participation, intended as a celebration of your work.
 
-**Poster Showcase:** In-Class, Thu Jun 5
+**Poster Showcase:** In-Class, {formatCalendarDate(calendarData.assignments.projectShowcase.date, "EEE MMM d")}
 
 &nbsp;
 
