Mark Project Components as UnderDevelopment

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -14,7 +14,7 @@ export const pathPosterTemplateC = '/assignments/poster-template-c-32x40.pptx';
 
 # Project
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Design and prototype an interactive system that explores human-AI interaction.
 You will work in a group to design and develop a prototype that incorporates a language model
@@ -34,6 +34,8 @@ extending them to a larger-scale group effort with a focus on design and develop
 
 ### Introduction and Idea
 
+<UnderDevelopment display={false} />
+
 Prepare and present 2 slides, in the provided presentation shared by the entire class:
 - 1 slide introducing yourself to the class.
 - 1 slide introducing an idea for a project direction.
@@ -47,6 +49,8 @@ Presentation will be limited to 2 minutes.
 &nbsp;
 
 ### Group Brainstorm
+
+<UnderDevelopment display={true} />
 
 As a potential group, brainstorm 3 possible project directions, in the provided document shared by the entire class:
 - Must be submitted with a group, as represented in the provided signup document.
@@ -67,6 +71,8 @@ All members of a project group should submit the PDF
 
 ### Groups Finalized
 
+<UnderDevelopment display={true} />
+
 Finalize a project group in the provided signup document shared by the entire class.
 
 **Due:** {formatCalendarDate(calendarData.assignments.projectGroupsFinalized.date, "EEE MMM d")}, 8pm
@@ -74,6 +80,8 @@ Finalize a project group in the provided signup document shared by the entire cl
 &nbsp;
 
 ### Design Proposal
+
+<UnderDevelopment display={true} />
 
 Submit a design proposal that does not exceed 1000 words.
 - Author this assignment in the Drive folder corresponding to your project group.
@@ -132,6 +140,8 @@ Submit via Canvas.
 &nbsp;
 
 ### Formative Research
+
+<UnderDevelopment display={true} />
 
 Submit formative research that does not exceed 1200 words.
 - Author this assignment in the Drive folder corresponding to your project group.
@@ -202,6 +212,8 @@ Submit via Canvas.
 &nbsp;
 
 ### Interactive Prototype
+
+<UnderDevelopment display={true} />
 
 Continue design and development,
 implementing at least one of the task scenarios in your interactive prototype.
@@ -274,6 +286,8 @@ Submit via Canvas.
 &nbsp;
 
 ### Revised Prototype
+
+<UnderDevelopment display={true} />
 
 Continue design and development,
 implementing at least two of the task scenarios in your interactive prototype.
@@ -399,6 +413,8 @@ We then expect teams to be available and responsive via email for feedback and r
 &nbsp;
 
 ### Final Prototype
+
+<UnderDevelopment display={true} />
 
 Continue design and development,
 implementing the three task scenarios in your interactive prototype.
@@ -544,6 +560,8 @@ The final poster showcase is graded only for participation, intended as a celebr
 &nbsp;
 
 ## Design Status Reports
+
+<UnderDevelopment display={true} />
 
 Several deliverables include a design status report.
 The format of each design status report is consistent,
