--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -50,11 +50,13 @@ Presentation will be limited to 2 minutes.
 
 ### Group Brainstorm
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 As a potential group, brainstorm 3 possible project directions, in the provided document shared by the entire class:
-- Must be submitted with a group, as represented in the provided signup document.
-- Group membership may also continue to evolve after this assignment.
+- Must be submitted with an in-progress project group, 
+  as represented in the provided Project Group Formation Status document.
+- Group membership may also continue to evolve after this assignment, 
+  including through consolidation of in-progress groups that are too small to proceed.
 - Each idea must not exceed 100 words.
 - Images may be included and do not count against the word limit.
 - Possible project directions may draw inspiration from anything.
@@ -62,7 +64,7 @@ As a potential group, brainstorm 3 possible project directions, in the provided 
 
 Submit via Canvas.
 
-All members of a project group should submit the PDF
+All members of an in-progress group should submit the PDF
 (i.e., because this is easiest for course staff while groups are still potentially in flux).
 
 **Due:** {formatCalendarDate(calendarData.assignments.projectGroupBrainstorm.date, "EEE MMM d")}, 8pm
