Mark Design Proposal as Finalized

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -73,7 +73,7 @@ All members of an in-progress group should submit the PDF
 
 ### Groups Finalized
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Finalize a project group in the provided signup document shared by the entire class.
 
@@ -83,7 +83,7 @@ Finalize a project group in the provided signup document shared by the entire cl
 
 ### Design Proposal
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Submit a design proposal that does not exceed 1000 words.
 - Author this assignment in the Drive folder corresponding to your project group.
