Updated Presentation Guidance

--- a/src/app/assignments/papers/page.mdx
+++ b/src/app/assignments/papers/page.mdx
@@ -53,6 +53,8 @@ Presentations should be organized as:
 
   Present what seems most important about this paper.
 
+  Remember that your primary audience is other students in this course.
+
   Present what people might take from this paper in their own work.
 
 - A prompt for questions or discussion with the class.
