Minor Text Polish

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -29,12 +29,11 @@ and reflection on designing with and for this emerging space.
 
 This capstone focuses on human-centered design with and around AI:
 - We assume existing experience with human-centered design methods.
-- We assume existing experience with or the ability to learn frameworks for developing interactive applications.
+- We assume existing experience with or the ability to learn frameworks for development of interactive applications.
 - We assume existing experience with collaborative software development (e.g., using Gitlab to collaborate).
 - We do not assume or expect existing experience developing with or around AI.
 - We do not assume or expect engagement with development of the underlying AI.
 
-{/* TODO: I think the pre-req courses may have changed, especially in HCDE. */}
 Given these expectations, the capstone publishes a pre-requisite of CSE 340, CSE 440, HCDE 318, or INFO 360.
 
 ## Course Staff
