Update Project Assignments for Reflection Citation

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -132,6 +132,9 @@ Include the following sections:
 - Reflect upon your design proposal relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
+  - Each project assignment require reflection relative to a distinct principle
+    (i.e., no two project assignments can reflect relative to the same principle).
+    You many choose any principle in this first assigment, but this constraint may inform your selection.
   - Cite the principle that frames your reflection
     (i.e., from papers in "Principles of Human-AI Interaction").
     This does not count against the word limit.
@@ -205,7 +208,14 @@ Include the following sections:
 - Reflect upon your formative research relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Begin by stating and crediting the principle, then reflect on your formative research relative to that principle.
+  - Each project assignment require reflection relative to a distinct principle
+    (i.e., no two project assignments can reflect relative to the same principle).
+  - Cite the principle that frames your reflection
+    (i.e., from papers in "Principles of Human-AI Interaction").
+    This does not count against the word limit.
+    For clarity, cite using the provided identifier and text:     
+    <CourseDataLink linkHref={courseData.offering.linkDriveGuidelines} outerComponent="p"/>    
+  - Then reflect on your formative research relative to that principle.
   - This reflection should focus on a specific finding and how it motivated changes or validated your design.
     This will require identifying a principle that is relevant to one or more elements of your design,
     then considering your findings and changes relative to the principle.
@@ -265,7 +275,14 @@ Include the following sections:
 - Reflect upon your current interactive prototype relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Begin by stating and crediting the principle, then reflect on your interactive prototype relative to that principle.
+  - Each project assignment require reflection relative to a distinct principle
+    (i.e., no two project assignments can reflect relative to the same principle).
+  - Cite the principle that frames your reflection
+    (i.e., from papers in "Principles of Human-AI Interaction").
+    This does not count against the word limit.
+    For clarity, cite using the provided identifier and text:     
+    <CourseDataLink linkHref={courseData.offering.linkDriveGuidelines} outerComponent="p"/>    
+  - Then reflect on your interactive prototype relative to that principle.
   - This reflection should focus on a specific aspect of your implementation,
     which could be a technical detail of your implementation
     or could be a change or new detail in your design.
@@ -341,8 +358,14 @@ Include the following sections:
 - Reflect upon your current interactive prototype relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Begin by stating and crediting the principle,
-    then reflect on your interactive prototype relative to that principle.
+  - Each project assignment require reflection relative to a distinct principle
+    (i.e., no two project assignments can reflect relative to the same principle).
+  - Cite the principle that frames your reflection
+    (i.e., from papers in "Principles of Human-AI Interaction").
+    This does not count against the word limit.
+    For clarity, cite using the provided identifier and text:     
+    <CourseDataLink linkHref={courseData.offering.linkDriveGuidelines} outerComponent="p"/>    
+  - Then reflect on your interactive prototype relative to that principle.
   - This reflection should focus on a specific aspect of your progress in design and implementation,
     which could be a change or new detail in your design
     or could be a technical detail of your implementation.
@@ -478,8 +501,14 @@ Include the following sections:
 - Reflect upon your current interactive prototype and usability testing relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Begin by stating and crediting the principle,
-    then reflect on your interactive prototype and usability testing relative to that principle.
+  - Each project assignment require reflection relative to a distinct principle
+    (i.e., no two project assignments can reflect relative to the same principle).
+  - Cite the principle that frames your reflection
+    (i.e., from papers in "Principles of Human-AI Interaction").
+    This does not count against the word limit.
+    For clarity, cite using the provided identifier and text:     
+    <CourseDataLink linkHref={courseData.offering.linkDriveGuidelines} outerComponent="p"/>    
+  - Then reflect on your interactive prototype and usability testing relative to that principle.
   - This reflection should focus on a specific insight and how it motivates changes or validates your design.
     This will require identifying a principle that is relevant to one or more elements of your design,
     then considering your insights and changes relative to the principle.
