--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -134,7 +134,7 @@ Include the following sections:
   - This must not exceed 150 words.
   - Each project assignment require reflection relative to a distinct principle
     (i.e., no two project assignments can reflect relative to the same principle).
-    You many choose any principle in this first assigment, but this constraint may inform your selection.
+    You may choose any principle in this first assignment, but this constraint may inform your selection.
   - Cite the principle that frames your reflection
     (i.e., from papers in "Principles of Human-AI Interaction").
     This does not count against the word limit.
