--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -132,7 +132,7 @@ Include the following sections:
 - Reflect upon your design proposal relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Each project assignment require reflection relative to a distinct principle
+  - Each project assignment requires reflection relative to a distinct principle
     (i.e., no two project assignments can reflect relative to the same principle).
     You may choose any principle in this first assignment, but this constraint may inform your selection.
   - Cite the principle that frames your reflection
@@ -208,7 +208,7 @@ Include the following sections:
 - Reflect upon your formative research relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Each project assignment require reflection relative to a distinct principle
+  - Each project assignment requires reflection relative to a distinct principle
     (i.e., no two project assignments can reflect relative to the same principle).
   - Cite the principle that frames your reflection
     (i.e., from papers in "Principles of Human-AI Interaction").
@@ -275,7 +275,7 @@ Include the following sections:
 - Reflect upon your current interactive prototype relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Each project assignment require reflection relative to a distinct principle
+  - Each project assignment requires reflection relative to a distinct principle
     (i.e., no two project assignments can reflect relative to the same principle).
   - Cite the principle that frames your reflection
     (i.e., from papers in "Principles of Human-AI Interaction").
@@ -358,7 +358,7 @@ Include the following sections:
 - Reflect upon your current interactive prototype relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Each project assignment require reflection relative to a distinct principle
+  - Each project assignment requires reflection relative to a distinct principle
     (i.e., no two project assignments can reflect relative to the same principle).
   - Cite the principle that frames your reflection
     (i.e., from papers in "Principles of Human-AI Interaction").
@@ -501,7 +501,7 @@ Include the following sections:
 - Reflect upon your current interactive prototype and usability testing relative to a principle of human-AI interaction
   (e.g., a principle articulated in one of the papers discussed in "Principles of Human-AI Interaction").
   - This must not exceed 150 words.
-  - Each project assignment require reflection relative to a distinct principle
+  - Each project assignment requires reflection relative to a distinct principle
     (i.e., no two project assignments can reflect relative to the same principle).
   - Cite the principle that frames your reflection
     (i.e., from papers in "Principles of Human-AI Interaction").
