Update to Design Status Report

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -603,13 +603,13 @@ The final poster showcase is graded only for participation, intended as a celebr
 
 ## Design Status Reports
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Several deliverables include a design status report.
 The format of each design status report is consistent,
 so that you can maintain and evolve such reports throughout the project.
 
-Submit each design status report in a separate document that does not exceed 700 words.
+Submit each design status report in a separate document that does not exceed 500 words.
 - Author this in the same Drive folder as the relevant deliverable.
 - Begin by copying the provided template document.
 - Include images where helpful to illustrate your design.
@@ -621,30 +621,38 @@ Include the following sections:
   and where you are focusing your exploration of human-AI interaction within that overall concept.
   - This must not exceed 100 words.
   - Each design status report will include this summary.
-    You may simply copy it forward between deliverables,
+    You may copy it forward between deliverables,
     but should ensure it remains current as your design and your approach evolve in the project.
-- Illustrate 3 primary task scenarios.
-  Recall a scenario demonstrates how a task is accomplished with a design.
-  You will continue updating these task scenarios as you develop your design.
-  - Each scenario must not exceed 200 words.
-  - Each design status report will include your task scenarios.
-    You may copy them forward between assignments,
-    but should ensure they remain current as your design and your approach evolve in the project.
-  - In one sentence, describe the task (i.e., what is accomplished).
-  - Use images to illustrate the scenario via a walkthrough of each key step in accomplishing the task with your design.
-    These can be sketches, mockups, or other illustrations of how a person will experience the scenario.
-    As you develop more of your project, these should become screenshots showing interaction with your design.
-  - Convey the walkthrough in enough detail that course staff can understand step-by-step interaction with your design.
-    We expect each scenario will include multiple images, but do not expect more than 6 images in a scenario.
-  - Any text used in the walkthrough does not count against the word limit.
-  - After the walkthrough, highlight key specific changes or details of your design
-    that are most important for understanding your design.
-    Share a brief rationale for those specific aspects of your design.
+- Provide walkthroughs illustrating 2 primary task scenarios.
+  A scenario demonstrates how an instance of a task is accomplished with a design.
+  - Describe the task and provide a simple story conveying context and details for accomplishing that task.
+    - Each scenario must not exceed 100 words.
+    - In one sentence, describe the task (i.e., what is accomplished).
+    - In one paragraph, provide a simple story conveying context and details to support illustrating the accomplishment of an instance of the task.
+  - Use images to provide a step-by-step walkthrough illustratting the scenario.
+    - Convey each key step in accomplishing the task with your design.
+      These can initially be sketches, mockups, or other illustrations of how a person will experience the scenario.
+      As you develop more of your project, these should become images captured from your prototype showing interaction with your design.
+    - Convey the walkthrough in enough detail that course staff can understand step-by-step interaction with your design.
+      We expect each scenario will include multiple images (e.g., 6 images conveying step-by-step interaction in a scenario).
+    - Any text used to provide image captions in the walkthrough does not count against word limits.
+  - Highlight key specific changes or details of your design
+    that are most important for understanding your current design status.
+    This might be text alongside a specific image in the walkthrough,
+    or it might be higher-level text following the overall walkthrough.
+    - Your primary assignment includes a summary of the most important changes or new details in your design.
+    - This calls attention to where course staff can see those changes or details in your walkthrough.
+    - This text must be concise, but does not count against word limits.
   - Describe your current understanding of language model support needed in the proposed interaction.
-    Consider when and how your design will invoke the language model throughout the scenario.
-    Consider the expected input and output for these language model invocations.
-  - If understanding your approach to language model support requires additional supporting documentation,
-    provide that in the same folder in a human-readable format (e.g., another document, PDFs).
-    Appropriately reference this supporting documentation in your description.
-    We do not intend this to be a burden,
-    so you may decide whether you feel such documentation is necessary for engaging with course staff around your design.
+    Describe when and how your design will or does invoke the language model throughout your scenario.
+    Describe expected input and output for these language model invocations.
+    - This must not exceed 100 words.
+    - If understanding your approach to language model support requires additional supporting documentation,
+      provide that in the same folder in a human-readable format (e.g., another document, PDFs).
+      Appropriately reference this supporting documentation in your description.
+      We do not intend this to be a burden,
+      so you may decide whether you feel such documentation is helpful for engaging with course staff around your design.
+- Ensure walkthroughs remain current throughout your design process.
+  - As you develop more of your project, walkthroughs should become images captured from your prototype showing interaction with your design.
+  - Changes in a task scenario may require or suggest changes in another task scenario.
+    Ensure your design status report conveys your overall design, even while you focus on specific elements.
