Edit for Brevity

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -636,7 +636,7 @@ Include the following sections:
     - Convey the walkthrough in enough detail that course staff can understand step-by-step interaction with your design.
       We expect each scenario will include multiple images (e.g., 6 images conveying step-by-step interaction in a scenario).
     - Any text used to provide image captions in the walkthrough does not count against word limits.
-  - Highlight key specific changes or details of your design
+  - Highlight key specific changes or details
     that are most important for understanding your current design status.
     This might be text alongside a specific image in the walkthrough,
     or it might be higher-level text following the overall walkthrough.
