--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -178,17 +178,20 @@ Include the following sections:
     These will be actionable opportunities or insights that changed or refined your thinking about your design.
   - Include specific evidence from your research to support your findings.
     We generally expect this will be quotes or other specific feedback from participants.
-- Report on formative research with an AI.
+- Report on a session of formative research with an AI.
   - This must not exceed 250 words.
   - Because language models can encode human experiences,
     it has been proposed that they can support design research.
     For example, see [Simulating the Human in HCD with ChatGPT: Redesigning Interaction Design with AI](https://doi.org/10.1145/3637436).
-  - Describe an exploration of trying to use an AI to gain insights into your design problem or proposed solution.
+  - Describe an exploration of trying to use an AI to gain insights into your design problem.
     For example, describe what types of insights you hoped AI might provide,
     how you explored its ability to provide those insights,
     and how you iterated in your prompting throughout that exploration.
     As part of this prompting, experiment with describing a persona that the AI should consider.
     Then further experiment with considering a different description or an entirely different persona.
+  - This session should use AI to explore your design proposal from a design perspective.
+    You may independently choose to consult AI regarding aspects of your implementation,
+    but this exploration is focused on design and how AI might supplement your formative research sessions with participants.
   - If your exploration proves useful, detail the insights that you surfaced.
     These will be actionable opportunities or insights that changed or refined your thinking about your design.
   - If your exploration does not prove useful, detail why you feel AI responses were not helpful.
@@ -201,7 +204,8 @@ Include the following sections:
     being sure to describe the relationship between findings and the resulting changes
   - If your findings have not motivated changes,
     instead describe how findings validate specific aspects of your existing design.
-  - Note you will separately provide updated task scenarios.
+  - Note you will separately provide updated task scenarios in your design status report.
+    That will call attention to where course staff can see these changes or details in your walkthrough.
 - Describe your planned technology stack.
   - This must not exceed 150 words.
   - Describe a specific combination of technologies you plan to use to implement your design.
