Be Clear on Video Narration

--- a/src/app/assignments/lab/page.mdx
+++ b/src/app/assignments/lab/page.mdx
@@ -105,6 +105,7 @@ Ensure the full code of your prototype is committed to your GitLab project:
 
 Submit a video demonstrating key functionality of your prototype:
 - This should not exceed approximately 3 minutes in length.
+- Include narration explaining what to see in the demonstration of you prototype.
 
 Submit via Canvas.
 
