Updates to Interactive Prototype

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -231,6 +231,7 @@ Include the following sections:
 
 Submit a Design Status Report as a separate document.
   - Follow guidance in <SiteLink linkKey={SiteLinks.assignmentsProjectDesignStatusReports}/>.
+  - Be sure the report captures your current design for all tasks.
 
 Submit via Canvas.
 
@@ -240,10 +241,10 @@ Submit via Canvas.
 
 ### Interactive Prototype
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Continue design and development,
-implementing at least one of the task scenarios in your interactive prototype.
+implementing at least one of the tasks in your interactive prototype.
 
 Submit an update on your interactive prototype that does not exceed 500 words.
 - Author this assignment in the Drive folder corresponding to your project group.
@@ -253,15 +254,15 @@ Submit an update on your interactive prototype that does not exceed 500 words.
 - Images do not count against the word limit.
 
 Include the following sections:
-- Describe the task scenarios currently implemented in your interactive prototype.
+- Describe the tasks currently implemented in your interactive prototype.
   - This does not count against the word limit.
-  - Limit this to a single sentence per implemented task scenario.
+  - Limit this to a single sentence per implemented task.
   - These sentences may be taken from the design status report,
     but you should ensure they reflect what is actually implemented in your interactive prototype.
 - Summarize the most important changes or new details in your design,
   as developed through your design and implementation efforts in your interactive prototype.
   - This must not exceed 150 words.
-  - Describe how feedback or work toward implementing the task scenarios prompted you to
+  - Describe how feedback or work toward implementing the tasks prompted you to
     change aspects of your design or define new details in aspects of your design.
     Be sure to describe the relationship between your evolving understanding and the resulting changes.
     For example, describe specific feedback, implementation issues, usability issues, or other issues revealed in your prototyping.
@@ -269,8 +270,9 @@ Include the following sections:
   - If your progress has not motivated changes or the definition of new details,
     instead describe how your progress validates specific aspects of your existing design.
   - If your progress has not required navigating meaningful issues,
-    consider that you may need to change or grow the scope of your design and your scenarios.
+    consider that you may need to change or grow the scope of your design.
   - Note you will separately provide updated task scenarios in your design status report.
+    That will call attention to where course staff can see these changes or details in your walkthrough.
 - Describe one thing you learned or insight you gained through progress in design and development of your prototype.
   - This must not exceed 200 words.
   - We are open to a wide range of learning as part of this assignment,
@@ -299,13 +301,15 @@ Include the following sections:
     or how the principle highlights a challenge or design tension around your implementation.
 
 Submit a Design Status Report as a separate document.
-- Follow guidance in <SiteLink linkKey={SiteLinks.assignmentsProjectDesignStatusReports}/>.
-- Be sure the report captures your current thinking for all task scenarios,
-  including any you have not yet implemented in your prototype.
+  - Follow guidance in <SiteLink linkKey={SiteLinks.assignmentsProjectDesignStatusReports}/>.
+  - Be sure the report captures your current design for all tasks.
+    Although this assignment only requires implementation of one task, 
+    your progress may require or suggest changes in your other task.
+  - Be sure implemented tasks include screen captures, updated from prior sketches.
 
 Submit a video demonstrating key functionality of your interactive prototype.
-- Must not exceed 2 minutes in length per demonstrated task scenario.
-- Include narration explaining how the task scenario is supported in the prototype.
+- Must not exceed 3 minutes in length per demonstrated task.
+- Include narration explaining how the task is supported in the prototype.
 
 Ensure the full code of your interactive prototype is committed to your GitLab project.
 - Include a brief README.md that details how to build and run your prototype.
